# aws-sso-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  build.yml  lint.yml  release.yml
src/: cli.rs  logger.rs  macros.rs  main.rs  utils.rs
src/aws/: config.rs  dto.rs  mod.rs  sso.rs  sso_oidc.rs
src/trash/: lib.rs
