[package]
name = "aws-sso-rs"
version = "1.1.0"
edition = "2021"
authors = ["containerscrew info@containerscrew.com"]
rust-version = "1.87.0"
repository = "https://github.com/containerscrew/aws-sso-rs"
license-file = "LICENSE"
description = "Fetch your ~/.aws/credentials using AWS SSO"

[dependencies]
console = "0.15.11"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
tracing = "0.1.40"
clap = { version = "4.4.18", features = ["derive"] }
aws-config = "1.6.3"
aws-sdk-sso = "1.72.0"
tokio = { version = "1.45.0", features = ["full", "time"] }
aws-sdk-ssooidc = "1.73.0"
webbrowser = "1.0.4"
shellexpand = "3.1.1"
configparser = "3.1.0"
indicatif = "0.17.11"

[profile.release]
strip = "debuginfo"
